--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>All courses are entered in Blackboard, but instructors need to activate the course before students can access it. Online courses typically open one week before the start of the course start date. Other courses will be accessible as soon as the instructor opens the course, which may occur one week before the start date to the actual start date.
     </p>
     <a href="https://instagram.com">my instagram profile</a>
+   <img src="https://cdn.pixabay.com/photo/2022/01/30/19/46/school-6982073_1280.jpg" alt="school house in the desert">
 
   </body>
   
