--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <HTML>
   
   <body>
-    <h1>This is the title</h1>
-    <p>This class will follow the School’s official academic calendar, including state, federal and religious official holidays. The class schedule will be posted on Blackboard and it's meant to be used as a guide and is subject to change at any point during the semester. Class cancellations will be communicated via Blackboard announcement. All classes are in person. Classes will not be conducted online, unless there is an official school closure or health advisory recommendation.
-    </p>
-    <h2>this is my second title</h2>
-    <p>All courses are entered in Blackboard, but instructors need to activate the course before students can access it. Online courses typically open one week before the start of the course start date. Other courses will be accessible as soon as the instructor opens the course, which may occur one week before the start date to the actual start date.
-    </p>
-    <a href="https://instagram.com">my instagram profile</a>
-   <img src="https://cdn.pixabay.com/photo/2022/01/30/19/46/school-6982073_1280.jpg" alt="school house in the desert">
+    <div>
+      <header>
+        <h1>this is the header</h1>
+      </header>
+      <article>
+        <div>
+          <h1>This is the title</h1>
+          <p>This class will follow the School’s official academic calendar, including state, federal and religious official holidays. The class schedule will be posted on Blackboard and it's meant to be used as a guide and is subject to change at any point during the semester. Class cancellations will be communicated via Blackboard announcement. All classes are in person. Classes will not be conducted online, unless there is an official school closure or health advisory recommendation. </p>
+          <h2>this is my second title</h2>
+          <p>All courses are entered in Blackboard, but instructors need to activate the course before students can access it. Online courses typically open one week before the start of the course start date. Other courses will be accessible as soon as the instructor opens the course, which may occur one week before the start date to the actual start date.</p>
+           <a href="https://instagram.com">my instagram profile</a>     
+        </div>
+          <figure>
+            <img src="https://cdn.pixabay.com/photo/2022/01/30/19/46/school-6982073_1280.jpg" alt="school house in the desert" style="width:100%">
+            <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+        </figure>      
+      </article>
+    </div>
+ 
 
   </body>
   
