--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 
 <HTML>
   <head>
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Rowdies:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-      h1 {
-        font-family: 'Rowdies', cursive;
-        
-      }
-      p, a {
-        font-family: 'Roboto', sans-serif;
-      }
-    </style>
   </head>
   <body>
     <main>
@@ -37,7 +29,7 @@
       <div>
         &copy; Michael Posso
       </div>
-      
+
     </footer>
  
 
