--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 
 <HTML>
   <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Rowdies:wght@400;700&display=swap" rel="stylesheet">
+    <
   </head>
   <body>
     <main>
